exports[`Card should match a diff card snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    dataNode="it is a lit place"
    location="tacolandiaville" />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="card-header">
          tacolandiaville
</h1>,
        <div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              0
                              : 
                              i
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              1
                              : 
                              t
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="less-than-half">
                              2
                              : 
                               
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              3
                              : 
                              i
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              4
                              : 
                              s
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="less-than-half">
                              5
                              : 
                               
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              6
                              : 
                              a
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="less-than-half">
                              7
                              : 
                               
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              8
                              : 
                              l
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              9
                              : 
                              i
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              10
                              : 
                              t
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="less-than-half">
                              11
                              : 
                               
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              12
                              : 
                              p
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              13
                              : 
                              l
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              14
                              : 
                              a
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              15
                              : 
                              c
                    </p>
          </div>
          <div
                    className="p-container">
                    <p
                              className="more-than-half">
                              16
                              : 
                              e
                    </p>
          </div>
</div>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "tacolandiaville",
          "className": "card-header",
        },
        "ref": null,
        "rendered": "tacolandiaville",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            0
                            : 
                            i
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            1
                            : 
                            t
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="less-than-half">
                            2
                            : 
                             
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            3
                            : 
                            i
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            4
                            : 
                            s
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="less-than-half">
                            5
                            : 
                             
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            6
                            : 
                            a
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="less-than-half">
                            7
                            : 
                             
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            8
                            : 
                            l
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            9
                            : 
                            i
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            10
                            : 
                            t
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="less-than-half">
                            11
                            : 
                             
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            12
                            : 
                            p
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            13
                            : 
                            l
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            14
                            : 
                            a
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            15
                            : 
                            c
              </p>
</div>,
            <div
              className="p-container">
              <p
                            className="more-than-half">
                            16
                            : 
                            e
              </p>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "5",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                0
                : 
                i
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "0",
                  ": ",
                  "i",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "0",
                ": ",
                "i",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "6",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                1
                : 
                t
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "1",
                  ": ",
                  "t",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "1",
                ": ",
                "t",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "7",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="less-than-half">
                2
                : 
                 
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "2",
                  ": ",
                  " ",
                ],
                "className": "less-than-half",
              },
              "ref": null,
              "rendered": Array [
                "2",
                ": ",
                " ",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "8",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                3
                : 
                i
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "3",
                  ": ",
                  "i",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "3",
                ": ",
                "i",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "9",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                4
                : 
                s
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "4",
                  ": ",
                  "s",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "4",
                ": ",
                "s",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "10",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="less-than-half">
                5
                : 
                 
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "5",
                  ": ",
                  " ",
                ],
                "className": "less-than-half",
              },
              "ref": null,
              "rendered": Array [
                "5",
                ": ",
                " ",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "11",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                6
                : 
                a
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "6",
                  ": ",
                  "a",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "6",
                ": ",
                "a",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "12",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="less-than-half">
                7
                : 
                 
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "7",
                  ": ",
                  " ",
                ],
                "className": "less-than-half",
              },
              "ref": null,
              "rendered": Array [
                "7",
                ": ",
                " ",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "13",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                8
                : 
                l
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "8",
                  ": ",
                  "l",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "8",
                ": ",
                "l",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "14",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                9
                : 
                i
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "9",
                  ": ",
                  "i",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "9",
                ": ",
                "i",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "15",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                10
                : 
                t
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "10",
                  ": ",
                  "t",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "10",
                ": ",
                "t",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "16",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="less-than-half">
                11
                : 
                 
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "11",
                  ": ",
                  " ",
                ],
                "className": "less-than-half",
              },
              "ref": null,
              "rendered": Array [
                "11",
                ": ",
                " ",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "17",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                12
                : 
                p
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "12",
                  ": ",
                  "p",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "12",
                ": ",
                "p",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "18",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                13
                : 
                l
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "13",
                  ": ",
                  "l",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "13",
                ": ",
                "l",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "19",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                14
                : 
                a
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "14",
                  ": ",
                  "a",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "14",
                ": ",
                "a",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "20",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                15
                : 
                c
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "15",
                  ": ",
                  "c",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "15",
                ": ",
                "c",
              ],
              "type": "p",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": "21",
            "nodeType": "host",
            "props": Object {
              "children": <p
                className="more-than-half">
                16
                : 
                e
</p>,
              "className": "p-container",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": null,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "16",
                  ": ",
                  "e",
                ],
                "className": "more-than-half",
              },
              "ref": null,
              "rendered": Array [
                "16",
                ": ",
                "e",
              ],
              "type": "p",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="card-header">
            tacolandiaville
</h1>,
          <div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    0
                                    : 
                                    i
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    1
                                    : 
                                    t
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="less-than-half">
                                    2
                                    : 
                                     
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    3
                                    : 
                                    i
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    4
                                    : 
                                    s
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="less-than-half">
                                    5
                                    : 
                                     
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    6
                                    : 
                                    a
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="less-than-half">
                                    7
                                    : 
                                     
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    8
                                    : 
                                    l
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    9
                                    : 
                                    i
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    10
                                    : 
                                    t
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="less-than-half">
                                    11
                                    : 
                                     
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    12
                                    : 
                                    p
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    13
                                    : 
                                    l
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    14
                                    : 
                                    a
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    15
                                    : 
                                    c
                        </p>
            </div>
            <div
                        className="p-container">
                        <p
                                    className="more-than-half">
                                    16
                                    : 
                                    e
                        </p>
            </div>
</div>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "tacolandiaville",
            "className": "card-header",
          },
          "ref": null,
          "rendered": "tacolandiaville",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                0
                                : 
                                i
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                1
                                : 
                                t
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="less-than-half">
                                2
                                : 
                                 
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                3
                                : 
                                i
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                4
                                : 
                                s
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="less-than-half">
                                5
                                : 
                                 
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                6
                                : 
                                a
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="less-than-half">
                                7
                                : 
                                 
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                8
                                : 
                                l
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                9
                                : 
                                i
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                10
                                : 
                                t
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="less-than-half">
                                11
                                : 
                                 
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                12
                                : 
                                p
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                13
                                : 
                                l
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                14
                                : 
                                a
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                15
                                : 
                                c
                </p>
</div>,
              <div
                className="p-container">
                <p
                                className="more-than-half">
                                16
                                : 
                                e
                </p>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "5",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  0
                  : 
                  i
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "0",
                    ": ",
                    "i",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "0",
                  ": ",
                  "i",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "6",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  1
                  : 
                  t
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "1",
                    ": ",
                    "t",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "1",
                  ": ",
                  "t",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "7",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="less-than-half">
                  2
                  : 
                   
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "2",
                    ": ",
                    " ",
                  ],
                  "className": "less-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "2",
                  ": ",
                  " ",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "8",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  3
                  : 
                  i
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "3",
                    ": ",
                    "i",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "3",
                  ": ",
                  "i",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "9",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  4
                  : 
                  s
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "4",
                    ": ",
                    "s",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "4",
                  ": ",
                  "s",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "10",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="less-than-half">
                  5
                  : 
                   
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "5",
                    ": ",
                    " ",
                  ],
                  "className": "less-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "5",
                  ": ",
                  " ",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "11",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  6
                  : 
                  a
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "6",
                    ": ",
                    "a",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "6",
                  ": ",
                  "a",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "12",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="less-than-half">
                  7
                  : 
                   
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "7",
                    ": ",
                    " ",
                  ],
                  "className": "less-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "7",
                  ": ",
                  " ",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "13",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  8
                  : 
                  l
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "8",
                    ": ",
                    "l",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "8",
                  ": ",
                  "l",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "14",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  9
                  : 
                  i
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "9",
                    ": ",
                    "i",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "9",
                  ": ",
                  "i",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "15",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  10
                  : 
                  t
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "10",
                    ": ",
                    "t",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "10",
                  ": ",
                  "t",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "16",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="less-than-half">
                  11
                  : 
                   
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "11",
                    ": ",
                    " ",
                  ],
                  "className": "less-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "11",
                  ": ",
                  " ",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "17",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  12
                  : 
                  p
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "12",
                    ": ",
                    "p",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "12",
                  ": ",
                  "p",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "18",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  13
                  : 
                  l
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "13",
                    ": ",
                    "l",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "13",
                  ": ",
                  "l",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "19",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  14
                  : 
                  a
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "14",
                    ": ",
                    "a",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "14",
                  ": ",
                  "a",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "20",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  15
                  : 
                  c
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "15",
                    ": ",
                    "c",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "15",
                  ": ",
                  "c",
                ],
                "type": "p",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": "21",
              "nodeType": "host",
              "props": Object {
                "children": <p
                  className="more-than-half">
                  16
                  : 
                  e
</p>,
                "className": "p-container",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": null,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "16",
                    ": ",
                    "e",
                  ],
                  "className": "more-than-half",
                },
                "ref": null,
                "rendered": Array [
                  "16",
                  ": ",
                  "e",
                ],
                "type": "p",
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the Card snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    dataNode={Object {}}
    location="Colorado" />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": null,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h1
          className="card-header">
          Colorado
</h1>,
        <div>
          
</div>,
      ],
      "className": "card",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": "Colorado",
          "className": "card-header",
        },
        "ref": null,
        "rendered": "Colorado",
        "type": "h1",
      },
      Object {
        "instance": null,
        "key": null,
        "nodeType": "host",
        "props": Object {
          "children": Array [],
        },
        "ref": null,
        "rendered": Array [],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": null,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h1
            className="card-header">
            Colorado
</h1>,
          <div>
            
</div>,
        ],
        "className": "card",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": "Colorado",
            "className": "card-header",
          },
          "ref": null,
          "rendered": "Colorado",
          "type": "h1",
        },
        Object {
          "instance": null,
          "key": null,
          "nodeType": "host",
          "props": Object {
            "children": Array [],
          },
          "ref": null,
          "rendered": Array [],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
